feat: chat UI
